tests/baselines/reference/parserSkippedTokens13.errors.txt
parserSkippedTokens13.ts(1,10): error TS1127: Invalid character.


==== parserSkippedTokens13.ts (1 errors) ====
    /regexp/ \ ;
             
!!! error TS1127: Invalid character.